update localization files and chanchange log

--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -644,4 +644,18 @@
 "至少进行一次模拟计算之后才能进行高级计算" = "至少进行一次模拟计算之后才能进行高级计算";
 "高级计算" = "高级计算";
 "计算结果" = "计算结果";
+"开始计算" = "开始计算";
+
+"最高分数" = "最高分数";
+"最低分数" = "最低分数";
+"理论最高分数" = "理论最高分数";
+"理论最低分数" = "理论最低分数";
+"模拟结果中前x%的最低分数" = "模拟结果中前x%的最低分数";
+"模拟结果中后x%的最高分数" = "模拟结果中后x%的最高分数";
+"模拟结果中分数落入指定区间[a, b]的概率" = "模拟结果中分数落入指定区间[a, b]的概率";
+"不填表示" = "不填表示";  // -∞ 或 +∞
+"根据概率密度曲线估算分数区间[a, b]的概率" = "根据概率密度曲线估算分数区间[a, b]的概率";
+"参考值" = "参考值";
+"自定义计算" = "自定义计算";
+"您输入的变量不合法" = "您输入的变量不合法";
 
