--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -638,3 +638,35 @@
 "至少进行一次模拟计算之后才能查看得分分布" = "調べる前にまず一回シミュレート計算して下さい";
 "* 本图是得分分布的近似概率密度曲线，模拟次数越多越精确" = "* このチャートはスコア確率分布の近接確率密度の曲線グラフです。グラフ精度とシミュレート回数は正の相関関係です。";
 
+/* new in 1.4.0 */
+"队伍模板" = "队伍模板";
+"编辑队伍" = "编辑队伍";
+"默认潜能等级" = "默认潜能等级";
+"默认特技等级" = "默认特技等级";
+"最近使用" = "最近使用";
+
+"最近使用中也包含好友的队长" = "最近使用中也包含好友的队长";
+"修改最近使用中的偶像潜能同步到同角色所有卡片" = "修改最近使用中的偶像潜能同步到同角色所有卡片";
+
+"最近使用中将潜能和特技等级相同的同一张卡视作同一偶像。单击将偶像添加至底部编辑区域。长按编辑偶像的潜能和特技等级，会自动更新所有包含该偶像的队伍。另外该偶像的潜能等级会自动同步到同角色所有卡片（此功能高级选项中可关闭）" = "最近使用中将潜能和特技等级相同的同一张卡视作同一偶像。单击将偶像添加至底部编辑区域。长按编辑偶像的潜能和特技等级，会自动更新所有包含该偶像的队伍。另外该偶像的潜能等级会自动同步到同角色所有卡片（此功能高级选项中可关闭）";
+
+"单击选择要修改的位置，双击可以从全部卡片中选择，长按可以编辑潜能和技能等级" = "单击选择要修改的位置，双击可以从全部卡片中选择，长按可以编辑潜能和技能等级";
+
+"至少进行一次模拟计算之后才能进行高级计算" = "至少进行一次模拟计算之后才能进行高级计算";
+"高级计算" = "高级计算";
+"计算结果" = "计算结果";
+"开始计算" = "开始计算";
+
+"最高分数" = "最高分数";
+"最低分数" = "最低分数";
+"理论最高分数" = "理论最高分数";
+"理论最低分数" = "理论最低分数";
+"模拟结果中前x%的最低分数" = "模拟结果中前x%的最低分数";
+"模拟结果中后x%的最高分数" = "模拟结果中后x%的最高分数";
+"模拟结果中分数落入指定区间[a, b]的概率" = "模拟结果中分数落入指定区间[a, b]的概率";
+"不填表示" = "不填表示";  // -∞ 或 +∞
+"根据概率密度曲线估算分数区间[a, b]的概率" = "根据概率密度曲线估算分数区间[a, b]的概率";
+"参考值" = "参考值";
+"自定义计算" = "自定义计算";
+"您输入的变量不合法" = "您输入的变量不合法";
+
