--- a/CGSSGuide/zh-Hant-TW.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant-TW.lproj/Localizable.strings
@@ -620,4 +620,34 @@
 "至少进行一次模拟计算之后才能查看得分分布" = "至少進行一次模擬計算之後才能檢視得分分佈";
 "* 本图是得分分布的近似概率密度曲线，模拟次数越多越精确" = "* 本圖是得分分佈的近似概率密度曲線，模擬次數越多越精確";
 
+/* new in 1.4.0 */
+"队伍模板" = "隊伍模板";
+"编辑队伍" = "編輯隊伍";
+"默认潜能等级" = "預設潛能等級";
+"默认特技等级" = "預設特技等級";
+"最近使用" = "最近使用";
 
+"最近使用中也包含好友的队长" = "最近使用中也包含好友的隊長";
+"修改最近使用中的偶像潜能同步到同角色所有卡片" = "修改最近使用中的偶像潛能同步到同角色所有卡片";
+
+"最近使用中将潜能和特技等级相同的同一张卡视作同一偶像。单击将偶像添加至底部编辑区域。长按编辑偶像的潜能和特技等级，会自动更新所有包含该偶像的队伍。另外该偶像的潜能等级会自动同步到同角色所有卡片（此功能高级选项中可关闭）" = "最近使用中將潛能和特技等級相同的同一張卡視作同一偶像。單擊將偶像新增至底部編輯區域。長按編輯偶像的潛能和特技等級，會自動更新所有包含該偶像的隊伍。另外該偶像的潛能等級會自動同步到同角色所有卡片（此功能高階選項中可關閉）";
+
+"单击选择要修改的位置，双击可以从全部卡片中选择，长按可以编辑潜能和技能等级" = "單擊選擇要修改的位置，雙擊可以從全部卡片中選擇，長按可以編輯潛能和技能等級";
+
+"至少进行一次模拟计算之后才能进行高级计算" = "至少進行一次模擬計算之後才能進行高階計算";
+"高级计算" = "高階計算";
+"计算结果" = "計算結果";
+"开始计算" = "開始計算";
+
+"最高分数" = "最高分數";
+"最低分数" = "最低分數";
+"理论最高分数" = "理論最高分數";
+"理论最低分数" = "理論最低分數";
+"模拟结果中前x%的最低分数" = "模擬結果中前x%的最低分數";
+"模拟结果中后x%的最高分数" = "模擬結果中後x%的最高分數";
+"模拟结果中分数落入指定区间[a, b]的概率" = "模擬結果中分數落入指定區間[a, b]的概率";
+"不填表示" = "不填表示";  // -∞ 或 +∞
+"根据概率密度曲线估算分数区间[a, b]的概率" = "根據概率密度曲線估算分數區間[a, b]的概率";
+"参考值" = "參考值";
+"自定义计算" = "自定義計算";
+"您输入的变量不合法" = "您輸入的變數不合法";
