--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -628,7 +628,7 @@
 
 /* new in 1.3.2 */
 
-"* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限スコアは特技100%発動として計算しています\n* 極限スコア1の計算に±0.06sのPERFECT判定補正を行います、その他の算出スコアは補正を行いません\n* シミュレート計算は10000回シミュレートを行い、並べたシミュレート結果のx%にそれぞれの最低値を取ります、結果は毎回異なります\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています";
+"* 极限分数中所有技能100%触发\n* 极限分数1中note取Perfect判定±0.06秒中的最优值\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响" = "* 極限スコアは特技100%発動として計算しています\n* 極限スコア1の計算に±0.06sのPERFECT判定補正を行います、その他の算出スコアは補正を行いません\n* シミュレート計算は設定回数のシミュレートを行い、並べたシミュレート結果のx%にそれぞれの最低値を取ります、結果は毎回異なります\n* GrooveまたはLIVE Paradeのモードを設定した時、ゲストは無視しています";
 
 "得分分布" = "スコア確率分布";
 "Great占比%" = "GREAT割合%";
@@ -639,33 +639,33 @@
 "* 本图是得分分布的近似概率密度曲线，模拟次数越多越精确" = "* このチャートはスコア確率分布の近接確率密度の曲線グラフです。グラフ精度とシミュレート回数は正の相関関係です。";
 
 /* new in 1.4.0 */
-"队伍模板" = "队伍模板";
-"编辑队伍" = "编辑队伍";
-"默认潜能等级" = "默认潜能等级";
-"默认特技等级" = "默认特技等级";
-"最近使用" = "最近使用";
+"队伍模板" = "テンプレート";
+"编辑队伍" = "ユニット編集";
+"默认潜能等级" = "既定ポテLv.";
+"默认特技等级" = "既定特技Lv.";
+"最近使用" = "最近に使う";
 
-"最近使用中也包含好友的队长" = "最近使用中也包含好友的队长";
-"修改最近使用中的偶像潜能同步到同角色所有卡片" = "修改最近使用中的偶像潜能同步到同角色所有卡片";
+"最近使用中也包含好友的队长" = "「最近に使う」にゲストセンターも含んでる";
+"修改最近使用中的偶像潜能同步到同角色所有卡片" = "「最近に使う」にポテンシャルの設定を\n該当キャラの他のカードにも同期する";
 
-"最近使用中将潜能和特技等级相同的同一张卡视作同一偶像。单击将偶像添加至底部编辑区域。长按编辑偶像的潜能和特技等级，会自动更新所有包含该偶像的队伍。另外该偶像的潜能等级会自动同步到同角色所有卡片（此功能高级选项中可关闭）" = "最近使用中将潜能和特技等级相同的同一张卡视作同一偶像。单击将偶像添加至底部编辑区域。长按编辑偶像的潜能和特技等级，会自动更新所有包含该偶像的队伍。另外该偶像的潜能等级会自动同步到同角色所有卡片（此功能高级选项中可关闭）";
+"最近使用中将潜能和特技等级相同的同一张卡视作同一偶像。单击将偶像添加至底部编辑区域。长按编辑偶像的潜能和特技等级，会自动更新所有包含该偶像的队伍。另外该偶像的潜能等级会自动同步到同角色所有卡片（此功能高级选项中可关闭）" = "「最近に使う」にはポテンシャルと特技レベルが一致する同じカードを同じアイドルとして扱います。タップして下画面の編集枠にアイドルを変更します。ロングタップしてアイドルのポテンシャルや特技レベルを編集します、該当アイドルを含んでるユニットにも同期更新します。その他に、アイドルのポテンシャル設定は該当キャラの他のカードにも同期します（アドバンスオプションに切ってきます）";
 
-"单击选择要修改的位置，双击可以从全部卡片中选择，长按可以编辑潜能和技能等级" = "单击选择要修改的位置，双击可以从全部卡片中选择，长按可以编辑潜能和技能等级";
+"单击选择要修改的位置，双击可以从全部卡片中选择，长按可以编辑潜能和技能等级" = "タップ：編集枠を変更\nダブルタップ：すべてのカードに選択\nロングタップ：ポテンシャルや特技レベルの編集";
 
-"至少进行一次模拟计算之后才能进行高级计算" = "至少进行一次模拟计算之后才能进行高级计算";
-"高级计算" = "高级计算";
-"计算结果" = "计算结果";
-"开始计算" = "开始计算";
+"至少进行一次模拟计算之后才能进行高级计算" = "計算する前にまず一回シミュレート計算して下さい";
+"高级计算" = "アドバンス計算";
+"计算结果" = "計算結果";
+"开始计算" = "計算開始";
 
-"最高分数" = "最高分数";
-"最低分数" = "最低分数";
-"理论最高分数" = "理论最高分数";
-"理论最低分数" = "理论最低分数";
-"模拟结果中前x%的最低分数" = "模拟结果中前x%的最低分数";
-"模拟结果中后x%的最高分数" = "模拟结果中后x%的最高分数";
-"模拟结果中分数落入指定区间[a, b]的概率" = "模拟结果中分数落入指定区间[a, b]的概率";
-"不填表示" = "不填表示";  // -∞ 或 +∞
-"根据概率密度曲线估算分数区间[a, b]的概率" = "根据概率密度曲线估算分数区间[a, b]的概率";
-"参考值" = "参考值";
-"自定义计算" = "自定义计算";
-"您输入的变量不合法" = "您输入的变量不合法";
+"最高分数" = "スコア最高値";
+"最低分数" = "スコア最低値";
+"理论最高分数" = "理論最高値";
+"理论最低分数" = "理論最低値";
+"模拟结果中前x%的最低分数" = "ｼﾐｭﾚｰﾄ結果に前部x%の最低値";
+"模拟结果中后x%的最高分数" = "ｼﾐｭﾚｰﾄ結果に後部x%の最高値";
+"模拟结果中分数落入指定区间[a, b]的概率" = "ｼﾐｭﾚｰﾄ結果にスコアが指定間隔[a, b]に当たる確率";
+"不填表示" = "入力なし＝";  // -∞ 或 +∞
+"根据概率密度曲线估算分数区间[a, b]的概率" = "確率密度曲線によるスコア間隔[a, b]の推定当たる確率";
+"参考值" = "参考値";
+"自定义计算" = "カスタム計算";
+"您输入的变量不合法" = "ご入力された変数は不正です";
