--- a/CGSSGuide/en.lproj/Localizable.strings
+++ b/CGSSGuide/en.lproj/Localizable.strings
@@ -440,7 +440,7 @@
 "为什么会有这个页面？" = "What is this?";
 "CGSSGuide是一款免费应用，现在以及未来都不会增加任何需要收费开启的功能，也不会使用常驻广告进行盈利。但是CGSSGuide的开发和所使用的服务器的维持都需要一定资金的支持，如果您喜欢这款应用，请支持我们。" = "CGSSGuide is a free application, and will neither add any paid feature nor any permanent advertisement. However, CGSSGuide is short of funds for the future development and server costs. If you like this application, please support us.";
 "如何支持我们？" = "How to do it?";
-"您可以通过购买下面的两个商品来支持本程序，购买任何一个商品都将移除本页面下方的广告。" = "You can purchase one of the item below to support us. Any one will remove the bottom advertisement.";
+"您可以通过购买下面的两个商品来支持本程序，购买任何一个商品都将移除本页面下方的广告。" = "You can purchase one of the items below to support us. Any item will remove the bottom advertisement.";
 "广告仅存在于本页面内。" = "The ad. is only within this page.";
 "感谢您的支持，广告已经被移除。" = "Thank you for supporting us, the ad. is removed.";
 "您的设备未开启应用内购买。" = "Your device do not allow in-app purchasing.";
