add privacy policy page

--- a/CGSSGuide/en.lproj/Main.strings
+++ b/CGSSGuide/en.lproj/Main.strings
@@ -121,3 +121,7 @@
 
 // new in 1.2.0
 "MIJ-2r-FVJ.text" = "Support us";
+
+// new in 1.4.2
+"lvk-wC-Vve.text" = "Privacy Policy";
+"2ao-EV-snd.title" = "Privacy Policy";
