--- a/CGSSGuide/ja.lproj/Main.strings
+++ b/CGSSGuide/ja.lproj/Main.strings
@@ -120,5 +120,8 @@
 "zkd-c8-p78.title" = "設定";
 
 // new in 1.2.0
-//"MIJ-2r-FVJ.text" = "寄付する";
 "MIJ-2r-FVJ.text" = "開発者を応援する";
+
+// new in 1.4.2
+"lvk-wC-Vve.text" = "プライバシーポリシー";
+"2ao-EV-snd.title" = "プライバシーポリシー";
