--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -176,7 +176,7 @@
 "数据需要更新" = "データの更新が必要です";
 
 /* 模拟抽卡页面 */
-"新卡列表" = "新アイドル";
+"新增卡片" = "新アイドル";
 
 /* 空字符串说明文字 */
 "无" = "なし";
@@ -669,3 +669,7 @@
 "参考值" = "参考値";
 "自定义计算" = "カスタム計算";
 "您输入的变量不合法" = "ご入力された変数は不正です";
+
+/* new in 1.4.2 */
+"天井" = "天井";
+"模拟抽卡" = "ガシャシミュレーター";
