--- a/CGSSGuide/zh-Hant.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant.lproj/Localizable.strings
@@ -179,7 +179,7 @@
 "数据需要更新" = "資料需要更新";
 
 /* 模拟抽卡页面 */
-"新卡列表" = "新卡列表";
+"新增卡片" = "新增卡片";
 
 /* 空字符串说明文字 */
 "无" = "無";
@@ -649,3 +649,7 @@
 "参考值" = "參考值";
 "自定义计算" = "自定義計算";
 "您输入的变量不合法" = "您輸入的變數不合法";
+
+/* new in 1.4.2 */
+"天井" = "天井";
+"模拟抽卡" = "模擬抽卡";
