--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -178,7 +178,7 @@
 "数据需要更新" = "数据需要更新";
 
 /* 模拟抽卡页面 */
-"新卡列表" = "新卡列表";
+"新增卡片" = "新增卡片";
 
 /* 空字符串说明文字 */
 "无" = "无";
@@ -658,3 +658,8 @@
 "参考值" = "参考值";
 "自定义计算" = "自定义计算";
 "您输入的变量不合法" = "您输入的变量不合法";
+
+/* new in 1.4.2 */
+"天井" = "天井";
+"模拟抽卡" = "模拟抽卡";
+"抽卡次数" = "抽卡次数";
