--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -673,6 +673,6 @@
 /* new in 1.4.2 */
 "天井" = "天井";
 "模拟抽卡" = "ガシャシミュレーター";
-"抽卡次数" = "抽卡次数";
-"星星数" = "星星数";
+"抽卡次数" = "引く回数";
+"星星数" = "スタージュエル";
 "占比" = "割合";
