--- a/CGSSGuide/zh-Hant.lproj/Main.strings
+++ b/CGSSGuide/zh-Hant.lproj/Main.strings
@@ -2,8 +2,8 @@
 /* Class = "UITableViewController"; title = "工具"; ObjectID = "08b-yF-FVx"; */
 "08b-yF-FVx.title" = "工具";
 
-/* Class = "UINavigationItem"; title = "我的隊伍"; ObjectID = "1N5-JG-Kjr"; */
-"1N5-JG-Kjr.title" = "我的隊伍";
+/* Class = "UINavigationItem"; title = "我的隊伍"; ObjectID = "omj-Op-jcb"; */
+"omj-Op-jcb.title" = "我的隊伍";
 
 /* Class = "UITableViewSection"; headerTitle = "反饋"; ObjectID = "1cN-eL-xzi"; */
 "1cN-eL-xzi.headerTitle" = "反饋";
