colleague finder added

--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -668,3 +668,18 @@
 
 /* new in 1.4.3 */
 "您无法创建超过 %d 个队伍" = "您无法创建超过 %d 个队伍";
+
+/* new in 1.5.0 */
+"删除" = "删除";
+"寻找同僚" = "寻找同僚";
+"我的信息" = "我的信息";
+"发布" = "发布";
+"游戏ID" = "游戏ID";
+"昵称" = "昵称";
+"我的队长" = "我的队长";
+"希望征集的队长" = "希望征集的队长";
+"留言" = "留言";
+
+"撤销发布" = "撤销发布";
+"撤销发布后其他人将无法搜索到您的信息，您已编辑过的信息不会被重置，随时可以再次发布。" = "撤销发布后其他人将无法搜索到您的信息，您已编辑过的信息不会被重置，随时可以再次发布。";
+
