more colleague finder

--- a/CGSSGuide/en.lproj/Localizable.strings
+++ b/CGSSGuide/en.lproj/Localizable.strings
@@ -666,7 +666,7 @@
 
 /* new in 1.5.0 */
 "删除" = "Delete";
-"寻找同僚" = "Search Colleague";
+"寻找同僚" = "Colleague Finder";
 "我的信息" = "My Profile";
 "发布" = "Post";
 "游戏ID" = "Game ID";
