minor fix for colleague finder and update localizable strings

--- a/CGSSGuide/ja.lproj/Localizable.strings
+++ b/CGSSGuide/ja.lproj/Localizable.strings
@@ -679,3 +679,46 @@
 
 /* new in 1.4.3 */
 "您无法创建超过 %d 个队伍" = "ユニット数が %d 件の上限を到達しています。";
+
+/* new in 1.5.0 */
+"删除" = "删除";
+"寻找同僚" = "寻找同僚";
+"我的信息" = "我的信息";
+"发布" = "发布";
+"游戏ID" = "游戏ID";
+"昵称" = "昵称";
+"我的队长" = "我的队长";
+"希望征集的队长" = "希望征集的队长";
+"留言" = "留言";
+
+"下拉刷新数据" = "下拉刷新数据";
+"获取数据失败，请检查您的网络" = "获取数据失败，请检查您的网络";
+"已复制ID到剪贴板" = "已复制ID到剪贴板";
+"没有更多数据了" = "没有更多数据了";
+"加载更多" = "加载更多";
+"正在加载..." = "正在加载...";
+
+"位置" = "位置";
+"目前仅支持筛选单个位置，如果您不需要筛选请设置为\"不限\"" = "目前仅支持筛选单个位置，如果您不需要筛选请设置为\"不限\"";
+"潜能" = "潜能";
+"偶像" = "偶像";
+"左滑删除" = "左滑删除";
+"筛选条件" = "筛选条件";
+"最低潜能等级" = "最低潜能等级";
+"添加一名偶像" = "添加一名偶像";
+"不限" = "不限";
+
+"双击从全部卡片中选择，长按编辑潜能或者移除偶像，我的队长中至少要填一个位置才能发布" = "双击从全部卡片中选择，长按编辑潜能或者移除偶像，我的队长中至少要填一个位置才能发布";
+"向所有用户公开您的信息，重复发布会自动覆盖之前的内容并刷新更新时间" = "向所有用户公开您的信息，重复发布会自动覆盖之前的内容并刷新更新时间";
+"您输入的游戏ID不合法" = "您输入的游戏ID不合法";
+"昵称不能超过10个文字" = "昵称不能超过10个文字";
+"至少添加一名自己的队长" = "至少添加一名自己的队长";
+"发布失败，请确保iCloud已登录并且网络状态正常" = "发布失败，请确保iCloud已登录并且网络状态正常";
+"撤销失败，请确保iCloud已登录并且网络状态正常" = "撤销失败，请确保iCloud已登录并且网络状态正常";
+"发布成功" = "发布成功";
+"撤销成功" = "撤销成功";
+"撤销中..." = "撤销中...";
+"撤销" = "撤销";
+"不再公开您之前已经发布的信息" = "不再公开您之前已经发布的信息";
+"保存信息，但是暂不公开" = "保存信息，但是暂不公开";
+"保存" = "保存";
