--- a/CGSSGuide/zh-Hant.lproj/Localizable.strings
+++ b/CGSSGuide/zh-Hant.lproj/Localizable.strings
@@ -659,3 +659,46 @@
 
 /* new in 1.4.3 */
 "您无法创建超过 %d 个队伍" = "您無法建立超過 %d 個隊伍";
+
+/* new in 1.5.0 */
+"删除" = "刪除";
+"寻找同僚" = "尋找同僚";
+"我的信息" = "我的設定檔";
+"发布" = "釋出";
+"游戏ID" = "遊戲ID";
+"昵称" = "暱稱";
+"我的队长" = "我的隊長";
+"希望征集的队长" = "希望徵集的隊長";
+"留言" = "留言";
+
+"下拉刷新数据" = "下拉重新整理資料";
+"获取数据失败，请检查您的网络" = "獲取資料失敗，請檢查您的網路";
+"已复制ID到剪贴板" = "已複製ID到剪貼簿";
+"没有更多数据了" = "沒有更多資料了";
+"加载更多" = "載入更多";
+"正在加载..." = "正在載入...";
+
+"位置" = "位置";
+"目前仅支持筛选单个位置，如果您不需要筛选请设置为\"不限\"" = "目前僅支援篩選單個位置，如果您不需要篩選請設定為\"不限\"";
+"潜能" = "潛能";
+"偶像" = "偶像";
+"左滑删除" = "左滑刪除";
+"筛选条件" = "篩選條件";
+"最低潜能等级" = "最低潛能等級";
+"添加一名偶像" = "新增一名偶像";
+"不限" = "不限";
+
+"双击从全部卡片中选择，长按编辑潜能或者移除偶像，我的队长中至少要填一个位置才能发布" = "雙擊從全部卡片中選擇，長按編輯潛能或者移除偶像，我的隊長中至少要填一個位置才能釋出";
+"向所有用户公开您的信息，重复发布会自动覆盖之前的内容并刷新更新时间" = "向所有使用者公開您的資訊，重複釋出會自動覆蓋之前的內容並重新整理更新時間";
+"您输入的游戏ID不合法" = "您輸入的遊戲ID不合法";
+"昵称不能超过10个文字" = "暱稱不能超過10個文字";
+"至少添加一名自己的队长" = "至少新增一名自己的隊長";
+"发布失败，请确保iCloud已登录并且网络状态正常" = "釋出失敗，請確保iCloud已登入並且網路狀態正常";
+"撤销失败，请确保iCloud已登录并且网络状态正常" = "撤銷失敗，請確保iCloud已登入並且網路狀態正常";
+"发布成功" = "釋出成功";
+"撤销成功" = "撤銷成功";
+"撤销中..." = "撤銷中...";
+"撤销" = "撤銷";
+"不再公开您之前已经发布的信息" = "不再公開您之前已經發布的資訊";
+"保存信息，但是暂不公开" = "儲存資訊，但是暫不公開";
+"保存" = "儲存";
