--- a/CGSSGuide/en.lproj/Localizable.strings
+++ b/CGSSGuide/en.lproj/Localizable.strings
@@ -652,7 +652,7 @@
 "根据概率密度曲线估算分数区间[a, b]的概率" = "Estimate the probability of score falls in [a, b] by kernel density estimation";
 "参考值" = "Reference Value";
 "自定义计算" = "Custom Calculation";
-"您输入的变量不合法" = "Your input is not valid";
+"您输入的变量不合法" = "Your input is invalid";
 
 /* new in 1.4.2 */
 "天井" = "300-pulls guarantees";
@@ -675,5 +675,34 @@
 "希望征集的队长" = "Centers Wanted";
 "留言" = "Message";
 
-"撤销发布" = "Revoke";
-"撤销发布后其他人将无法搜索到您的信息，您已编辑过的信息不会被重置，随时可以再次发布。" = "After revoking, your profile are not searchable by others. But your profile will NOT be reset, you can post it again later.";
+"下拉刷新数据" = "Pull Down to Refresh";
+"获取数据失败，请检查您的网络" = "Getting remote data failed, please check your network connection.";
+"已复制ID到剪贴板" = "Game ID is copied to clipboard";
+"没有更多数据了" = "No more";
+"加载更多" = "Load more";
+"正在加载..." = "Loading...";
+
+"位置" = "Postion";
+"目前仅支持筛选单个位置，如果您不需要筛选请设置为\"不限\"" = "Only support filtering one position each time, if you don't want to filter, set to \"no limit\"";
+"潜能" = "Potential";
+"偶像" = "Idols";
+"左滑删除" = "Swipe to delete";
+"筛选条件" = "Filter Conditions";
+"最低潜能等级" = "Min. Potential Lv.";
+"添加一名偶像" = "Add an idol";
+"不限" = "no limit";
+
+"双击从全部卡片中选择，长按编辑潜能或者移除偶像，我的队长中至少要填一个位置才能发布" = "Double click to select from all cards, long press to edit potential or delete it. You have to set at least one center.";
+"向所有用户公开您的信息，重复发布会自动覆盖之前的内容并刷新更新时间" = "Make your profile public, repeat posting will automatically overwrite the previous content and refresh the update time";
+"您输入的游戏ID不合法" = "Your game ID is invalid";
+"昵称不能超过10个文字" = "Nickname must be within 10 characters";
+"至少添加一名自己的队长" = "At least add one of my centers";
+"发布失败，请确保iCloud已登录并且网络状态正常" = "Posting failed, please verify your iCloud account and the internet connection";
+"撤销失败，请确保iCloud已登录并且网络状态正常" = "Revoking failed，please verify your iCloud account and the internet connection";
+"发布成功" = "Posting succeed";
+"撤销成功" = "Revoking succeed";
+"撤销中..." = "Revoking...";
+"撤销" = "Revoke";
+"不再公开您之前已经发布的信息" = "Make the profile you post previously unlisted";
+"保存信息，但是暂不公开" = "Save the profile, but don't post it";
+"保存" = "Save";
