--- a/CGSSGuide/Base.lproj/Localizable.strings
+++ b/CGSSGuide/Base.lproj/Localizable.strings
@@ -711,3 +711,54 @@
 "不再公开您之前已经发布的信息" = "不再公开您之前已经发布的信息";
 "保存信息，但是暂不公开" = "保存信息，但是暂不公开";
 "保存" = "保存";
+
+/* localize skill explains locally */
+"使所有PERFECT音符获得 %d%% 的分数加成" = "使所有PERFECT音符获得 %d%% 的分数加成";
+"使所有PERFECT/GREAT音符获得 %d%% 的分数加成" = "使所有PERFECT/GREAT音符获得 %d%% 的分数加成";
+"使所有PERFECT/GREAT/NICE音符获得 %d%% 的分数加成" = "使所有PERFECT/GREAT/NICE音符获得 %d%% 的分数加成";
+"获得额外的 %d%% 的COMBO加成" = "获得额外的 %d%% 的COMBO加成";
+"使所有GREAT音符改判为PERFECT" = "使所有GREAT音符改判为PERFECT";
+"使所有GREAT/NICE音符改判为PERFECT" = "使所有GREAT/NICE音符改判为PERFECT";
+"使所有GREAT/NICE/BAD音符改判为PERFECT" = "使所有GREAT/NICE/BAD音符改判为PERFECT";
+"所有音符改判为PERFECT" = "所有音符改判为PERFECT";
+"使NICE音符不会中断COMBO" = "使NICE音符不会中断COMBO";
+"使BAD/NICE音符不会中断COMBO" = "使BAD/NICE音符不会中断COMBO";
+"使你的COMBO不会中断" = "使你的COMBO不会中断";
+"使你的生命不会减少" = "使你的生命不会减少";
+"使所有音符恢复你 %d 点生命" = "使所有音符恢复你 %d 点生命";
+"消耗 %2$d 生命，PERFECT音符获得 %1$d%% 的分数加成，并且NICE/BAD音符不会中断COMBO" = "消耗 %2$d 生命，PERFECT音符获得 %1$d%% 的分数加成，并且NICE/BAD音符不会中断COMBO";
+"使所有PERFECT音符获得 %d%% 的分数加成，且PERFECT以外的判定将中断COMBO" = "使所有PERFECT音符获得 %d%% 的分数加成，且PERFECT以外的判定将中断COMBO";
+"会发生有趣的事情" = "会发生有趣的事情";
+"使所有PERFECT音符恢复你 %d 点生命" = "使所有PERFECT音符恢复你 %d 点生命";
+"使所有PERFECT/GREAT音符恢复你 %d 点生命" = "使所有PERFECT/GREAT音符恢复你 %d 点生命";
+"使所有PERFECT/GREAT/NICE音符恢复你 %d 点生命" = "使所有PERFECT/GREAT/NICE音符恢复你 %d 点生命";
+"当前发动技能将被增强" = "当前发动技能将被增强";
+"当仅有Cute偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "当仅有Cute偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成";
+"当仅有Cool偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "当仅有Cool偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成";
+"当仅有Passion偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "当仅有Passion偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成";
+"获得额外的 %d%% 的COMBO加成，并使所有PERFECT音符恢复你 %d 点生命" = "获得额外的 %d%% 的COMBO加成，并使所有PERFECT音符恢复你 %d 点生命";
+
+"每 %d 秒，" = "每 %d 秒，";
+"有 %@%% 的几率" = "有 %@%% 的几率";
+"，持续 %@ 秒。" = "，持续 %@ 秒。";
+
+
+"所有Cute" = "所有Cute";
+"所有Cool" = "所有Cool";
+"所有Passion" = "所有Passion";
+"所有" = "所有";
+
+"Vocal表现值" = "Vocal表现值";
+"Visual表现值" = "Visual表现值";
+"Dance表现值" = "Dance表现值";
+"所有表现值" = "所有表现值";
+"生命" = "生命";
+"特技发动几率" = "特技发动几率";
+
+"提升%@偶像的%@ %d%%。" = "提升%@偶像的%@ %d%%。";
+"%@和%@" = "%@和%@";
+"、" = "、";
+"只有" = "只有";
+"当%@属性的偶像存在于队伍时，" = "当%@属性的偶像存在于队伍时，";
+"此队长技能的内部描述格式未定义" = "此队长技能的内部描述格式未定义";
+/* end of skill explain localization */
