--- a/DereGuide/zh-Hant.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant.lproj/Localizable.strings
@@ -748,8 +748,11 @@
 "提升%@偶像的%@ %d%%。" = "提升%@偶像的%@ %d%%。";
 "%@和%@" = "%@和%@";
 "、" = "、";
-"只有" = "只有";
+"只有%@" = "只有%@";
 "当%@属性的偶像存在于队伍时，" = "當%@屬性的偶像存在於隊伍時，";
+"Cute" = "Cute";
+"Cool" = "Cool";
+"Passion" = "Passion";
 "此队长技能的内部描述格式未定义" = "此隊長技能的內部描述格式未定義";
 /* end of skill explain localization */
 
