--- a/DereGuide/Base.lproj/Localizable.strings
+++ b/DereGuide/Base.lproj/Localizable.strings
@@ -758,8 +758,11 @@
 "提升%@偶像的%@ %d%%。" = "提升%@偶像的%@ %d%%。";
 "%@和%@" = "%@和%@";
 "、" = "、";
-"只有" = "只有";
+"只有%@" = "只有%@";
 "当%@属性的偶像存在于队伍时，" = "当%@属性的偶像存在于队伍时，";
+"Cute" = "Cute";
+"Cool" = "Cool";
+"Passion" = "Passion";
 "此队长技能的内部描述格式未定义" = "此队长技能的内部描述格式未定义";
 /* end of skill explain localization */
 
