--- a/DereGuide/en.lproj/Localizable.strings
+++ b/DereGuide/en.lproj/Localizable.strings
@@ -752,8 +752,11 @@
 "提升%@偶像的%@ %d%%。" = "raises %2$@ of %1$@ members by %3$d%%.";
 "%@和%@" = "%@ and %@";
 "、" = ", ";
-"只有" = "only ";
+"只有%@" = "only %@";
 "当%@属性的偶像存在于队伍时，" = "When there are %@ idols on the team, ";
+"Cute" = "Cute";
+"Cool" = "Cool";
+"Passion" = "Passion";
 "此队长技能的内部描述格式未定义" = "I don't know how to describe this leader skill.";
 /* end of skill explain localization */
 
