localize detail description for skill boost

--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -740,7 +740,7 @@
 "使所有PERFECT/GREAT音符恢复你 %d 点生命" = "PERFECT/GREATでライフ %d 回復";
 "使所有PERFECT/GREAT/NICE音符恢复你 %d 点生命" = "PERFECT/GREAT/NICEでライフ %d 回復";
 // TODO: 需要翻译
-"当前发动技能将被增强" = "他アイドルの特技効果を大アップ";
+"使当前发动的分数加成和COMBO加成额外提高 %d%%，生命恢复和护盾额外恢复 1 点生命，改判范围增加一档" = "他アイドルの特技効果を大アップ";
 "当仅有Cute偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "キュートアイドルのみ編成時、PERFECTのスコア %d%% アップ、COMBOボーナス %d%% アップ";
 "当仅有Cool偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "クールアイドルのみ編成時、PERFECTのスコア %d%% アップ、COMBOボーナス %d%% アップ";
 "当仅有Passion偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "パッションアイドルのみ編成時、PERFECTのスコア %d%% アップ、COMBOボーナス %d%% アップ";
