--- a/DereGuide/zh-Hant.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant.lproj/Localizable.strings
@@ -723,7 +723,7 @@
 "使所有PERFECT音符恢复你 %d 点生命" = "使所有PERFECT音符恢復你 %d 點生命";
 "使所有PERFECT/GREAT音符恢复你 %d 点生命" = "使所有PERFECT/GREAT音符恢復你 %d 點生命";
 "使所有PERFECT/GREAT/NICE音符恢复你 %d 点生命" = "使所有PERFECT/GREAT/NICE音符恢復你 %d 點生命";
-"当前发动技能将被增强" = "當前發動技能將被增強";
+"使当前发动的分数加成和COMBO加成额外提高 %d%%，生命恢复和护盾额外恢复 1 点生命，改判范围增加一档" = "使當前發動的分數加成和COMBO加成額外提高 %d%%，生命恢復和護盾額外恢復 1 點生命，改判範圍增加一檔";
 "当仅有Cute偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "當僅有Cute偶像存在於隊伍時，使所有PERFECT音符獲得 %d%% 的分數加成，並獲得額外的 %d%% 的COMBO加成";
 "当仅有Cool偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "當僅有Cool偶像存在於隊伍時，使所有PERFECT音符獲得 %d%% 的分數加成，並獲得額外的 %d%% 的COMBO加成";
 "当仅有Passion偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "當僅有Passion偶像存在於隊伍時，使所有PERFECT音符獲得 %d%% 的分數加成，並獲得額外的 %d%% 的COMBO加成";
