--- a/DereGuide/en.lproj/Localizable.strings
+++ b/DereGuide/en.lproj/Localizable.strings
@@ -727,7 +727,7 @@
 "使所有PERFECT音符恢复你 %d 点生命" = "Perfect notes will restore %d health";
 "使所有PERFECT/GREAT音符恢复你 %d 点生命" = "Great/Perfect notes will restore %d health";
 "使所有PERFECT/GREAT/NICE音符恢复你 %d 点生命" = "Nice/Great/Perfect notes will restore %d health";
-"使当前发动的分数加成和COMBO加成额外提高 %d%%，生命恢复和护盾额外恢复 1 点生命，改判范围增加一档" = "currently active combo bonus and score bonus will gain extra %d%%, healer and guard will restore extra 1 health, perfect lock will extend down";
+"使当前发动的分数加成和COMBO加成额外提高 %d%%，生命恢复和护盾额外恢复 1 点生命，改判范围增加一档" = "currently active combo bonus and score bonus will gain extra %d%%, healer and guard will restore extra 1 health, perfect lock will extend its scope";
 "当仅有Cute偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "when there are only Cute idols on the team, Perfect notes will receive a %d%% score bonus, and you will gain an extra %d%% combo bonus";
 "当仅有Cool偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "when there are only Cool idols on the team, Perfect notes will receive a %d%% score bonus, and you will gain an extra %d%% combo bonus";
 "当仅有Passion偶像存在于队伍时，使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "when there are only Passion idols on the team, Perfect notes will receive a %d%% score bonus, and you will gain an extra %d%% combo bonus";
