colleague finder get user support card info from deresute.me

--- a/DereGuide/Base.lproj/Localizable.strings
+++ b/DereGuide/Base.lproj/Localizable.strings
@@ -681,7 +681,7 @@
 "留言" = "留言";
 
 "下拉刷新数据" = "下拉刷新数据";
-"获取数据失败，请检查您的网络" = "获取数据失败，请检查您的网络";
+"获取数据失败，请检查您的网络并确保iCloud处于登录状态" = "获取数据失败，请检查您的网络并确保iCloud处于登录状态";
 "已复制ID到剪贴板" = "已复制ID到剪贴板";
 "没有更多数据了" = "没有更多数据了";
 "加载更多" = "加载更多";
@@ -697,11 +697,19 @@
 "添加一名偶像" = "添加一名偶像";
 "不限" = "不限";
 
+// using deresute.me
+"未能获取到正确的数据，请稍后再试" = "未能获取到正确的数据，请稍后再试";
+"下一步" = "下一步";
+"获取数据中..." = "获取数据中...";
+"您输入的游戏ID不存在" = "您输入的游戏ID不存在";
+"输入您的游戏ID" = "输入您的游戏ID";
+// using manually input
 "双击从全部卡片中选择，长按编辑潜能或者移除偶像，我的队长中至少要填一个位置才能发布" = "双击从全部卡片中选择，长按编辑潜能或者移除偶像，我的队长中至少要填一个位置才能发布";
+"至少添加一名自己的队长" = "至少添加一名自己的队长";
+"昵称不能超过10个文字" = "昵称不能超过10个文字";
+// both
 "向所有用户公开您的信息，重复发布会自动覆盖之前的内容并刷新更新时间" = "向所有用户公开您的信息，重复发布会自动覆盖之前的内容并刷新更新时间";
 "您输入的游戏ID不合法" = "您输入的游戏ID不合法";
-"昵称不能超过10个文字" = "昵称不能超过10个文字";
-"至少添加一名自己的队长" = "至少添加一名自己的队长";
 "发布失败，请确保iCloud已登录并且网络状态正常" = "发布失败，请确保iCloud已登录并且网络状态正常";
 "撤销失败，请确保iCloud已登录并且网络状态正常" = "撤销失败，请确保iCloud已登录并且网络状态正常";
 "发布成功" = "发布成功";
