--- a/DereGuide/zh-Hant-TW.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant-TW.lproj/Localizable.strings
@@ -674,7 +674,7 @@
 "留言" = "留言";
 
 "下拉刷新数据" = "下拉重新整理資料";
-"获取数据失败，请检查您的网络" = "獲取資料失敗，請檢查您的網路";
+"获取数据失败，请检查您的网络并确保iCloud处于登录状态" = "獲取資料失敗，請檢查您的網路";
 "已复制ID到剪贴板" = "已複製ID到剪貼簿";
 "没有更多数据了" = "沒有更多資料了";
 "加载更多" = "載入更多";
@@ -690,11 +690,19 @@
 "添加一名偶像" = "新增一名偶像";
 "不限" = "不限";
 
+// using deresute.me
+"未能获取到正确的数据，请稍后再试" = "未能獲取到正確的資料，請稍後再試";
+"下一步" = "下一步";
+"获取数据中..." = "獲取資料中...";
+"您输入的游戏ID不存在" = "您輸入的遊戲ID不存在";
+"输入您的游戏ID" = "輸入您的遊戲ID";
+// using manually input
 "双击从全部卡片中选择，长按编辑潜能或者移除偶像，我的队长中至少要填一个位置才能发布" = "雙擊從全部卡片中選擇，長按編輯潛能或者移除偶像，我的隊長中至少要填一個位置才能釋出";
-"向所有用户公开您的信息，重复发布会自动覆盖之前的内容并刷新更新时间" = "向所有使用者公開您的資訊，重複釋出會自動覆蓋之前的內容並重新整理更新時間";
-"您输入的游戏ID不合法" = "您輸入的遊戲ID不合法";
-"昵称不能超过10个文字" = "暱稱不能超過10個文字";
 "至少添加一名自己的队长" = "至少新增一名自己的隊長";
+"昵称不能超过10个文字" = "暱稱不能超過10個文字";
+// both
+"您输入的游戏ID不合法" = "您輸入的遊戲ID不合法";
+"向所有用户公开您的信息，重复发布会自动覆盖之前的内容并刷新更新时间" = "向所有使用者公開您的資訊，重複釋出會自動覆蓋之前的內容並重新整理更新時間";
 "发布失败，请确保iCloud已登录并且网络状态正常" = "釋出失敗，請確保iCloud已登入並且網路狀態正常";
 "撤销失败，请确保iCloud已登录并且网络状态正常" = "撤銷失敗，請確保iCloud已登入並且網路狀態正常";
 "发布成功" = "釋出成功";
